Implentation Demo GoChatbot AIX-119 AIX-120 AIX-121

--- a/go_chatbot/static/go_chatbot.css
+++ b/go_chatbot/static/go_chatbot.css
@@ -14,3 +14,13 @@
     color: #858585;
     font-weight: 300;
 }
+
+pre{
+    font-size: 16px;
+    padding: 10px 0px;
+    margin: 0px;
+}
+
+.display-none{
+    display: none;
+}
