--- a/go_chatbot/templates/go_chatbot.html
+++ b/go_chatbot/templates/go_chatbot.html
@@ -2,7 +2,7 @@
 
 {% block head %}{{ super() }}
     <link rel="stylesheet" href="{{ url_for('go_chatbot.static', filename='go_chatbot.css') }}">
-    <link rel="stylesheet" href="go_chatbot/static/highlight/styles/default.css">
+    <link rel="stylesheet" href="../go_chatbot/static/highlight/styles/ascetic.css">
 {% endblock %}
 
 {% block title %}Goal-Oriented Chatbot{% endblock %}
@@ -31,6 +31,17 @@
                 <p class="information">time</p>
                 <p class="information">city</p>
                 <p class="information">theatre</p>
+                <pre><code class="json">{
+      "purpose": "request",
+      "information": {
+        "moviename": "zoolander",
+        "numberpeople": "2"
+      },
+      "requests": {
+        "date": "UKN"
+      },
+      "userMessage": "Which date can I book 2 tickets for Zoolander?"
+    }</code></pre>
             </div>
             <div id="sample-data" class="col-md-6">
 
@@ -41,7 +52,7 @@
 
 {% block scripts %}
     {{ super() }}
-    <script src="go_chatbot/static/highlight/highlight.pack.js"></script>
+    <script src="../go_chatbot/static/highlight/highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     <script src="{{ url_for('go_chatbot.static', filename='go_chatbot.js') }}"></script>
 {% endblock %}
