Implementation Goal Oriented Chatbot AIX-119 AIX-120 AIX-121

--- a/go_chatbot/static/highlight/styles/ascetic.css
+++ b/go_chatbot/static/highlight/styles/ascetic.css
@@ -22,7 +22,7 @@ Original style from softwaremaniacs.org (c) Ivan Sagalaev <Maniac@SoftwareManiac
 .hljs-attribute,
 .hljs-link {
   font-weight: 500;
-  color: #551166;
+  color: #0EABA9;
 }
 
 .hljs-comment,
