Implementation AIX-129 + bugs correction

--- a/go_chatbot/static/go_chatbot.css
+++ b/go_chatbot/static/go_chatbot.css
@@ -28,3 +28,19 @@ pre{
 
 .json-display{
 }
+
+.information-data > div > p{
+    margin-bottom: 32px;
+}
+
+.data-label{
+    display: flex;
+}
+
+.data-label > p{
+    padding-right: 10px;
+}
+
+.checked{
+    color: #25B252;
+}
