--- a/go_chatbot/templates/go_chatbot.html
+++ b/go_chatbot/templates/go_chatbot.html
@@ -25,15 +25,15 @@
         </div>
         <div id="data-container" class="row">
             <div class="col-md-6 information-data">
-                <p class="information">moviename</p>
-                <p class="information">number of people</p>
-                <p class="information">date</p>
-                <p class="information">time</p>
-                <p class="information">city</p>
-                <p class="information">theatre</p>
+                <div class="data-label"><p id="moviename">moviename</p></div>
+                <div class="data-label"><p id="numberofpeople">number of people</p></div>
+                <div class="data-label"><p id="date">date</p></div>
+                <div class="data-label"><p id="starttime">time</p></div>
+                <div class="data-label"><p id="city">city</p></div>
+                <div class="data-label"><p id="theater">theatre</p></div>
             </div>
             <div id="sample-data" class="col-md-6">
-
+                <!-- Display Data Sample Randomly -->
             </div>
         </div>
     </div>
