--- a/go_chatbot/templates/go_chatbot.html
+++ b/go_chatbot/templates/go_chatbot.html
@@ -14,12 +14,12 @@
 {% block samples %}
     <div class="sample-container aix-invisible">
         <div class="sample-container__header">
-            <h4>Needed information</h4>
+            <h4>How can I start to chat ?</h4>
             <i id="btn-refresh"
                class="btn-sample-refresh icon icon-071-retry icon--s2 icon--flip-horizontal"
                aria-hidden="true"></i>
         </div>
-        <p class="userInstruction">To get a movie ticket you need to inform the chatbot about the following information.</p>
+        <p class="userInstruction">To get a movie ticket you need to inform the chatbot about the following <strong>needed information</strong>.</p>
         <div class="sample-data-loader">
             <div class="loader-spinner loader-spinner--large loader-spinner--plain"></div>
         </div>
@@ -34,6 +34,15 @@
             </div>
             <div id="sample-data" class="col-md-6">
                 <!-- Display Data Sample Randomly -->
+            </div>
+        </div>
+        <div class="useradvice-container">
+            <div class="advice-container__header">
+                <h4>How to get started</h4>
+                <p id="hint-instruction">Find here a sample question to start chatting</p>
+            </div>
+            <div id="hint-question">
+                <p><i>Which theater is available tomorrow for 3 tickets for Deadpool ?</i></p>
             </div>
         </div>
     </div>
