--- a/go_chatbot/templates/go_chatbot.html
+++ b/go_chatbot/templates/go_chatbot.html
@@ -14,12 +14,12 @@
 {% block samples %}
     <div class="sample-container aix-invisible">
         <div class="sample-container__header">
-            <h4>How can I start to chat ?</h4>
+            <h4>Needed Information</h4>
             <i id="btn-refresh"
                class="btn-sample-refresh icon icon-071-retry icon--s2 icon--flip-horizontal"
                aria-hidden="true"></i>
         </div>
-        <p class="userInstruction">To get a movie ticket you need to inform the chatbot about the following <strong>needed information</strong>.</p>
+        <p class="user-instruction">To get a movie ticket you need to inform the chatbot about the following <strong>needed information</strong>.</p>
         <div class="sample-data-loader">
             <div class="loader-spinner loader-spinner--large loader-spinner--plain"></div>
         </div>
