--- a/data_selection/templates/data_selection.html
+++ b/data_selection/templates/data_selection.html
@@ -12,6 +12,67 @@
 {% block description %}Lorem ipsum dolor sit amet, consectetur adipiscing{% endblock %}
 
 {% block content %}
+    <div class="row flex-items-xs-center">
+        <div id="audio-section" class="col-lg-8">
+            <div id="start-advice" class="">
+                <i class="icon icon-046-information-circle icon--s2" aria-hidden="true"></i>
+                <p>Please listen the audio sample and transcribe it below</p>
+            </div>
+            <div class="audio-container">
+                <nav class="sample-label">
+                    <span id="0" class="active"><p>Sample 1</p></span>
+                    <span id="1" class=""><p>Sample 2</p></span>
+                    <span id="2" class=""><p>Sample 3</p></span>
+                    <span id="3" class=""><p>Sample 4</p></span>
+                    <span id="4" class=""><p>Sample 5</p></span>
+                    <span id="5" class=""><p>Sample 6</p></span>
+                </nav>
+                <div id="audio-player">
+                    <div class="audio-btn col-lg-2">
+                        <button id="play-btn" class="btn-container">
+                            <i class="icon icon-060-play-filled icon--s2" aria-hidden="true"></i>
+                        </button>
+                        <button id="stop-btn" class="btn-container display-none">
+                            <i class="icon icon-057-pause-filled icon--s2" aria-hidden="true"></i>
+                        </button>
+                        <div id="audio-timer">
+                            <div id="current-time"></div>
+                            <div id="duration-time"></div>
+                        </div>
+                    </div>
+                    <div id="waveform" class="waveform-vizualizer col-lg-10"></div>
+                    <div class="player-options col-lg-12">
+                        <div class="col-lg-2"></div>
+                        <div class="col-lg-10 display-flex no-gutters">
+                            <div class="audio-speed">
+                                <p>Speed</p>
+                                <div class="speed-option">
+                                    <i id="minus" class="icon icon-052-minus icon--s1 rate-option" aria-hidden="true"></i>
+                                    <p id="audio-speed-rate"></p>
+                                    <i id="plus" class="icon icon-061-plus icon--s1 rate-option" aria-hidden="true"></i>
+                                </div>
+                            </div>
+                            <div id="audio-move">
+                                <i id="go-start" class="icon icon-040-go-to-start"></i>
+                                <i id="go-end" class="icon icon-038-go-to-end"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row flex-items-xs-center">
+        <div class="col-xs col-lg-8">
+            <h2>Transcription</h2>
+            <div id="transcription-section" class="col-lg-12">
+                <div class="input-field input-multiline input-field--static-label" data-init="auto">
+                    <textarea id="input-transcription" placeholder="Please transcribe here the audio sample" data-min-rows="3" data-max-rows="10"></textarea>
+                </div>
+                <input class="button button--primary submit-button disabled" type="submit" value="Process">
+            </div>
+        </div>
+    </div>
 {% endblock %}
 
 {% block scripts %}
