Implementation Input field & submit function

--- a/data_selection/templates/data_selection.html
+++ b/data_selection/templates/data_selection.html
@@ -69,7 +69,7 @@
                 <div class="input-field input-multiline input-field--static-label" data-init="auto">
                     <textarea id="input-transcription" placeholder="Please transcribe here the audio sample" data-min-rows="3" data-max-rows="10"></textarea>
                 </div>
-                <input class="button button--primary submit-button disabled" type="submit" value="Process">
+                <input id="submit-button" class="button button--primary submit-button disabled" type="submit" value="Process">
             </div>
         </div>
     </div>
