--- a/data_selection/static/data_selection.css
+++ b/data_selection/static/data_selection.css
@@ -1,5 +1,5 @@
 #audio-section{
-  margin: 32px 0px;
+  margin: 16px 0px;
 }
 
 #start-advice{
@@ -161,7 +161,7 @@ nav{
 
 #audio-move > i{
   font-size: 18px;
-  padding: 0px 5px;
+  padding: 0px 10px;
   color: #1781E3;
 }
 
@@ -187,10 +187,70 @@ h2{
   float: right;
 }
 
+/* -------- Result -------- */
+
+#user-transcription{
+  display: flex;
+  font-size: 18px;
+  font-style: italic;
+  padding: 16px 0px;
+}
+
+.user-transcription{
+  font-weight: 400;
+  color: #5c5c5c;
+  padding-right: 10px; 
+}
+
+#result{
+  display: flex;
+}
+
+#results-section{
+  padding-bottom: 16px; 
+}
+
+.results-container{
+  padding: 0px;
+  text-align: left;
+}
+
+table{
+  width: 100%;
+  font-size: 16px;
+  padding: 16px 32px;
+  background-color: #EEF3F6;
+}
+
+th{
+  color: #474747;
+  font-weight: 500;
+  padding-bottom: 10px;
+}
+
+td{
+  max-width: 0;
+  padding-bottom: 10px; 
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  text-transform: uppercase;
+}
+
+.transcription{
+  width: 80%;
+  padding-right: 16px; 
+}
+
+.score{
+  width: 20%;
+  color: #858585;
+}
+
 /* ----- STATE ------ */
 
 .display-none{
-  display: none;
+  display: none!important;
 }
 
 .display-flex{
@@ -208,4 +268,47 @@ h2{
 
 .active > p{
   font-weight: 600;
+}
+
+/* loader */
+
+@keyframes blink {
+  0% {
+    opacity: 0.3;
+  }
+  20% {
+    opacity: 0.9;
+  }
+  100% {
+    opacity: 0.2;
+  }
+}
+
+.ellipsis-loader {
+    display: flex;
+    height: 24px;
+    justify-content: center;
+    align-items: center;
+}
+
+.ellipsis-loader > div {
+    animation-name: blink;
+    animation-duration: 1.6s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: both;
+    line-height: 24px;
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    margin-right: 10px;
+    background-color: #fff;
+}
+
+.ellipsis-loader > div:nth-child(2) {
+    animation-delay: 0.2s;
+}
+
+.ellipsis-loader > div:nth-child(3) {
+    animation-delay: 0.4s;
+    margin: 0;
 }
