updated text sfid description

--- a/sfid/templates/sfid.html
+++ b/sfid/templates/sfid.html
@@ -4,7 +4,7 @@
 
 {% block title %}Slot Filling & Intent Detection{% endblock %}
 
-{% block description %}This is a demo description.{% endblock %}
+{% block description %}We extract the intent and the slots mentioned and use them to create an API call{% endblock %}
 
 {% block input_placeholder_text %}{{ super() }}{% endblock %}
 
