--- a/multilingual/templates/multilingual_index.html
+++ b/multilingual/templates/multilingual_index.html
@@ -46,5 +46,5 @@
 
 {% block scripts %}
 {{ super() }}
-<script src="{{ url_for('static', filename='index.js') }}"></script>
+<script src="{{ url_for('multilingual.static', filename='multilingual.js') }}"></script>
 {% endblock %}
