added demo description

--- a/data_selection/templates/data_selection.html
+++ b/data_selection/templates/data_selection.html
@@ -9,7 +9,7 @@
 
 {% block title %}ASR Data Selection {% endblock %}
 
-{% block description %}Lorem ipsum dolor sit amet, consectetur adipiscing{% endblock %}
+{% block description %}"Let's see how similar you are..."{% endblock %}
 
 {% block content %}
     <div class="row flex-items-xs-center">
