- Add entries for index and error HTML files - Add label tweet platform - Ignore all files in model except README - Config for label in config template - Server html link

--- a/templates/error.html
+++ b/templates/error.html
@@ -37,6 +37,7 @@
                 <div class="demo_name">Emotion Recognition </div>
                 <div class="demo_name">Grocery Identification </div>
                 <div class="demo_name">Argumentation </div>
+                <div class="demo_name">Tweet Label </div>
                 <div class="demo_name">GSW </div>
                 <div class="demo_name">Machine Translation </div>
                 <div class="demo_name">Speaker Identification </div>
@@ -54,6 +55,7 @@
                 <div class="demo_url"><a href="/emotion">/emotion</a></div>
                 <div class="demo_url"><a href="/grocery">/grocery</a></div>
                 <div class="demo_url"><a href="/argumentation">/argumentation</a></div>
+                <div class="demo_url"><a href="/tweet_label">/tweet_label</a></div>
                 <div class="demo_url"><a href="/gsw">/gsw</a></div>
                 <div class="demo_url"><a href="/translate">/translate</a></div>
                 <div class="demo_url"><a href="/sid">/sid</a></div>
