- Add answers/samples for bots in English and German - Churn python controller, js and html - New chatbot with emotion - Bot faces (angry, smile, neutral) - Update churn uri structure

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,6 +37,7 @@
                 <div class="demo_name">Emotion Recognition </div>
                 <div class="demo_name">Grocery Identification </div>
                 <div class="demo_name">Argumentation </div>
+                <div class="demo_name">Churn </div>
                 <div class="demo_name">Tweet Label </div>
                 <div class="demo_name">GSW </div>
                 <div class="demo_name">Machine Translation </div>
@@ -58,6 +59,7 @@
                 <div class="demo_url"><a href="/emotion">/emotion</a></div>
                 <div class="demo_url"><a href="/grocery">/grocery</a></div>
                 <div class="demo_url"><a href="/argumentation">/argumentation</a></div>
+                <div class="demo_url"><a href="/churn">/churn</a></div>
                 <div class="demo_url"><a href="/tweet_label">/tweet_label</a></div>
                 <div class="demo_url"><a href="/gsw">/gsw</a></div>
                 <div class="demo_url"><a href="/translate">/translate</a></div>
@@ -76,14 +78,14 @@
                     <div class="demo_name">Ubuntu Chatbot - Retrieval </div>
                     <div class="demo_name">Ubuntu Chatbot - Generative </div>
                     <div class="demo_name">Opinion Target </div>
-                    <div class="demo_name">CHURN </div>
+{#                    <div class="demo_name">CHURN </div>#}
                 </div>
             </div>
             <div class="col-md-5">
                     <div class="demo_url"><a href="/chatbot/ubuntu">/chatbot/ubuntu</a></div>
                     <div class="demo_url"><a href="/chatbot/ubuntuseq2seq">/chatbot/ubuntuseq2seq</a></div>
                     <div class="demo_url"><a href="/opinion">/opinion</a></div>
-                    <div class="demo_url"><a href="/churn">/churn</a></div>
+{#                    <div class="demo_url"><a href="/churn">/churn</a></div>#}
             </div>
             <div class="col-md-1"></div>
         </div>
