--- a/templates/error.html
+++ b/templates/error.html
@@ -22,65 +22,96 @@
             <div class="col-md-10"><center><span id="error404">404</span><span id="welcome"> - Oops, it seems there is no demo to show here. Have you tried any of these?</span></center></div>
             <div class="col-md-1"></div>
         </div>
+        <div class="group_title"> Chatbots </div>
         <div class="row" id="working">
             <div class="col-md-1"></div>
             <div class="col-md-5">
-                <div class="demo_name">SQL Chatbot </div>
-                <div class="demo_name">Neural Programmer Football </div>
-                <div class="demo_name">Key Phrase Extraction </div>
-                <div class="demo_name">Key Phrase Extraction (Group) </div>
-                <div class="demo_name">Name Entity Recognition (NER) </div>
-                <div class="demo_name">Summarization </div>
-                <div class="demo_name">Slot Filling and Intent Detection </div>
-                <div class="demo_name">Neural Programmer Swisscom </div>
-                <div class="demo_name">Chatbot Goal Oriented </div>
-                <div class="demo_name">Emotion Recognition </div>
-                <div class="demo_name">Grocery Identification </div>
-                <div class="demo_name">Argumentation </div>
-                <div class="demo_name">Tweet Label </div>
-                <div class="demo_name">GSW </div>
-                <div class="demo_name">Machine Translation </div>
-                <div class="demo_name">Speaker Identification </div>
-                <div class="demo_name">Speech Emotion Recognition </div>
+                <div class="featured demo_name">SQL Chatbot </div>
+                <div class="featured demo_name">Slot Filling and Intent Detection </div>
+                <div class="featured demo_name">Chatbot Goal Oriented </div>
+                <div class="legacy demo_name">Neural Programmer Football </div>
+                <div class="legacy demo_name">Neural Programmer Swisscom </div>
+                <div class="legacy demo_name">Ubuntu Chatbot - Retrieval </div>
+                <div class="legacy demo_name">Ubuntu Chatbot - Generative </div>
             </div>
             <div class="col-md-5">
-                <div class="demo_url"><a href="/seq2sql">/seq2sql</a></div>
-                <div class="demo_url"><a href="/neural_programmer/steps">/neural_programmer/steps</a></div>
-                <div class="demo_url"><a href="/kp">/kp</a></div>
-                <div class="demo_url"><a href="/kp/emb">/kp/emb</a></div>
-                <div class="demo_url"><a href="/ner">/ner</a></div>
-                <div class="demo_url"><a href="/summarization">/summarization</a></div>
-                <div class="demo_url"><a href="/sfid">/sfid</a></div>
-                <div class="demo_url"><a href="/neural_programmer/swisscom">/neural_programmer/swisscom</a></div>
-                <div class="demo_url"><a href="/go_chatbot">/go_chatbot</a></div>
-                <div class="demo_url"><a href="/emotion">/emotion</a></div>
-                <div class="demo_url"><a href="/grocery">/grocery</a></div>
-                <div class="demo_url"><a href="/argumentation">/argumentation</a></div>
-                <div class="demo_url"><a href="/tweet_label">/tweet_label</a></div>
-                <div class="demo_url"><a href="/gsw">/gsw</a></div>
-                <div class="demo_url"><a href="/translate">/translate</a></div>
-                <div class="demo_url"><a href="/sid">/sid</a></div>
-                <div class="demo_url"><a href="/speech_emotion">/speech_emotion</a></div>
-
+                <div class="featured demo_url"><a href="/seq2sql">/seq2sql</a></div>
+                <div class="featured demo_url"><a href="/sfid">/sfid</a></div>
+                <div class="featured demo_url"><a href="/go_chatbot">/go_chatbot</a></div>
+                <div class="legacy demo_url"><a href="/neural_programmer/steps">/neural_programmer/steps</a></div>
+                <div class="legacy demo_url"><a href="/neural_programmer/swisscom">/neural_programmer/swisscom</a></div>
+                <div class="legacy demo_url"><a href="/chatbot/ubuntu">/chatbot/ubuntu</a></div>
+                <div class="legacy demo_url"><a href="/chatbot/ubuntuseq2seq">/chatbot/ubuntuseq2seq</a></div>
+                
             </div>
             <div class="col-md-1"></div>
         </div>
-        <div class="group_title"> PREVIOUS PROJECTS </div>
+        <div class="group_title"> Text </div>
         <div class="row" id=previous>
             <div class="col-md-1"></div>
             <div class="col-md-5">
                 <div class="demo_group">
-                    <div class="demo_name">Ubuntu Chatbot - Retrieval </div>
-                    <div class="demo_name">Ubuntu Chatbot - Generative </div>
-                    <div class="demo_name">Opinion Target </div>
-                    <div class="demo_name">CHURN </div>
+                    <div class="featured demo_name">Tweet Label </div>
+                    <div class="featured demo_name">Multilingual Embeddings </div>
+                    <div class="featured demo_name">Key Phrase Extraction </div>
+                    <div class="featured demo_name">Key Phrase Extraction (Group) </div>
+                    <div class="featured demo_name">Long Document Classification </div>
+                    <div class="featured demo_name">Summarization </div>
+                    <div class="featured demo_name">Argumentation </div>
+                    <div class="featured demo_name">GSW </div>
+                    <div class="featured demo_name">Machine Translation </div>
+                    <div class="legacy demo_name">Opinion Target </div>
+                    <div class="legacy demo_name">CHURN </div>
+                    <div class="legacy demo_name">Name Entity Recognition (NER) </div>
                 </div>
             </div>
             <div class="col-md-5">
-                    <div class="demo_url"><a href="/chatbot/ubuntu">/chatbot/ubuntu</a></div>
-                    <div class="demo_url"><a href="/chatbot/ubuntuseq2seq">/chatbot/ubuntuseq2seq</a></div>
-                    <div class="demo_url"><a href="/opinion">/opinion</a></div>
-                    <div class="demo_url"><a href="/churn">/churn</a></div>
+                <div class="featured demo_url"><a href="/tweet_label">/tweet_label</a></div>
+                <div class="featured demo_url"><a href="/multilingual">/multilingual</a></div>
+                <div class="featured demo_url"><a href="/kp">/kp</a></div>
+                <div class="featured demo_url"><a href="/kp/emb">/kp/emb</a></div>
+                <div class="featured demo_url"><a href="/doc_emb">/doc_emb</a></div>
+                <div class="featured demo_url"><a href="/summarization">/summarization</a></div>
+                <div class="featured demo_url"><a href="/argumentation">/argumentation</a></div>
+                <div class="featured demo_url"><a href="/gsw">/gsw</a></div>
+                <div class="featured demo_url"><a href="/translate">/translate</a></div>
+                <div class="legacy demo_url"><a href="/opinion">/opinion</a></div>
+                <div class="legacy demo_url"><a href="/churn">/churn</a></div>
+                <div class="legacy demo_url"><a href="/ner">/ner</a></div>
+            </div>
+            <div class="col-md-1"></div>
+        </div>
+        <div class="group_title"> Speech </div>
+        <div class="row" id=previous>
+            <div class="col-md-1"></div>
+            <div class="col-md-5">
+                <div class="demo_group">
+                    <div class="featured demo_name">Speaker Identification </div>
+                    <div class="featured demo_name">Language Identification </div>
+                    <div class="featured demo_name">Data Selection </div>
+                    <div class="featured demo_name">Speech Emotion Recognition </div>
+                </div>
+            </div>
+            <div class="col-md-5">
+                <div class="featured demo_url"><a href="/sid">/sid</a></div>
+                <div class="featured demo_url"><a href="/lid">/sid</a></div>
+                <div class="featured demo_url"><a href="/data_selection">/data_selection</a></div>
+                <div class="featured demo_url"><a href="/speech_emotion">/speech_emotion</a></div>
+            </div>
+            <div class="col-md-1"></div>
+        </div>
+        <div class="group_title"> Image </div>
+        <div class="row" id=previous>
+            <div class="col-md-1"></div>
+            <div class="col-md-5">
+                <div class="demo_group">
+                    <div class="featured demo_name">Emotion Recognition </div>
+                    <div class="featured demo_name">Grocery Identification </div>
+                </div>
+            </div>
+            <div class="col-md-5">
+                <div class="featured demo_url"><a href="/sid">/emotion</a></div>
+                <div class="featured demo_url"><a href="/data_selection">/grocery</a></div>
             </div>
             <div class="col-md-1"></div>
         </div>
