Small error in link name

--- a/templates/index.html
+++ b/templates/index.html
@@ -110,7 +110,7 @@
                 </div>
             </div>
             <div class="col-md-5">
-                <div class="featured demo_url"><a href="/sid">/emotion</a></div>
+                <div class="featured demo_url"><a href="/emotion">/emotion</a></div>
                 <div class="featured demo_url"><a href="/data_selection">/grocery</a></div>
             </div>
             <div class="col-md-1"></div>
