More link fixing

--- a/templates/error.html
+++ b/templates/error.html
@@ -94,7 +94,7 @@
             </div>
             <div class="col-md-5">
                 <div class="featured demo_url"><a href="/sid">/sid</a></div>
-                <div class="featured demo_url"><a href="/lid">/sid</a></div>
+                <div class="featured demo_url"><a href="/lid">/lid</a></div>
                 <div class="featured demo_url"><a href="/data_selection">/data_selection</a></div>
                 <div class="featured demo_url"><a href="/speech_emotion">/speech_emotion</a></div>
             </div>
@@ -110,7 +110,7 @@
                 </div>
             </div>
             <div class="col-md-5">
-                <div class="featured demo_url"><a href="/sid">/emotion</a></div>
+                <div class="featured demo_url"><a href="/emotion">/emotion</a></div>
                 <div class="featured demo_url"><a href="/data_selection">/grocery</a></div>
             </div>
             <div class="col-md-1"></div>
