--- a/templates/index.html
+++ b/templates/index.html
@@ -94,7 +94,7 @@
             </div>
             <div class="col-md-5">
                 <div class="featured demo_url"><a href="/sid">/sid</a></div>
-                <div class="featured demo_url"><a href="/lid">/sid</a></div>
+                <div class="featured demo_url"><a href="/lid">/lid</a></div>
                 <div class="featured demo_url"><a href="/data_selection">/data_selection</a></div>
                 <div class="featured demo_url"><a href="/speech_emotion">/speech_emotion</a></div>
             </div>
