- Users feedback - Syntax correction - Add examples without source brand

--- a/churn/templates/churn_description.html
+++ b/churn/templates/churn_description.html
@@ -17,7 +17,7 @@
 
 {% block content %}
     <p>Unsatisfied clients might express their will to leave a specific company (<strong>BRAND</strong>).
-    This is what we call churn. We are listing here a list of basic example so you can understand it.</p>
+    This is what we call churn. We are listing here a list of basic examples so you can understand it.</p>
 <div class="card card--dark card--notification">
 {#  <p class="card__text">Global roaming is now switched on</p>#}
  <table style="width:100%">
@@ -49,18 +49,31 @@
    <tr>
     <td>4</td>
     <td>BRAND-1</td>
-    <td>I am fed up with &lt<strong>BRAND-1</strong>&gt!</td>
+    <td>I don't like &lt<strong>BRAND-1</strong>&gt!</td>
     <td> <span class="font--semi-bold int-green">No churn</span> </td>
+  </tr>
+
+    <tr>
+    <td>5</td>
+    <td>-</td>
+    <td>I will leave your service at the end of the month!</td>
+    <td> <span class="font--semi-bold int-red">Churn</span> </td>
   </tr>
 </table>
 </div>
 
-<p><br>Note that for number 2 and 3, the text is the same. However th reference brand change.
-Indeed <strong>BRAND-2</strong> is not considered by the churny content since the user wants to join its service .
-For example 4 it is not churn as well. Expressing disagreement with a service does not necessary mean you will quit it. </p>
+<p><br>1. It is churn since the user is clear about his will to leave <strong>BRAND-1</strong>.</p>
 
-<p> With the bot you can try yourself to enter text with either churny or non churny content. The aim of the bot
-will be to detect if the entry is churny or not. Please help us to improve bot performance by giving it feedback on its answers. </p>
+<p>2-3. The text is the same for both examples, however the reference brand is different.
+In this case, <strong>BRAND-2</strong> is not considered by the churny content since the user wants to join its service.
+</p>
+
+<p>4. It is not churn as well since expressing disagreement with a service does not necessary mean you will quit it. </p>
+
+<p>5. Here we don't have source brand. The user directly says he wants to leave the service.</p>
+
+<p> With the bot, you can try yourself to enter text with either churny or non churny content. The aim of the bot
+will be to detect if the entry is churny or not. Please help us to improve the bot performance by giving it feedback on its answers. </p>
 
     {% if t is not none %}
         <div class="button-group">
