--- a/templates/kp_extraction/kp_extraction_emb.html
+++ b/templates/kp_extraction/kp_extraction_emb.html
@@ -40,11 +40,11 @@
     <div class="container">
         <div class="row" id="banner_row">
             <div class="col-md-1"></div>
-            <div class="col-md-10">
+            <!-- <div class="col-md-10">
                 <center>
                     <img id=banner src='{{ url_for('static', filename='assets/swisscom-logo.png ') }}'>
                 </center>
-            </div>
+            </div> -->
             <div class="col-md-1"></div>
         </div>
         <div class="row" id="search_row">
@@ -52,11 +52,6 @@
             <div class="col-md-10">
                 <div id="custom-search-input">
                     <div class="input-group col-md-12">
-                        <span class="input-group-btn">
-                            <button class="btn btn-info btn-lg" type="button" id='project_select'>
-                                <span id="project_value">KPE</span>
-                            </button>
-                        </span>
                         <input type="text" id="input_text" class="form-control input-lg" placeholder="Enter an URL" />
                         <span class="input-group-btn" id="last_group">
                             <button id="search_button" class="btn btn-info btn-lg" type="button">
